<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_findjob"
            android:icon="@drawable/ic_findjob"
            android:title="@string/findjob" />

        <item
            android:id="@+id/nav_yourjobs"
            android:icon="@drawable/ic_yourjobs"
            android:title="@string/yourjobs" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

    </group>

    <item
        android:id="@+id/nav_signout"
        android:icon="@drawable/ic_signout"
        android:title="@string/signout" />


</menu>